# code_forces

./: A-simple_design.cpp  A_Sorting_with_Twos.cpp  A_Sum_of_Three.cpp  B_Deja_Vu.cpp  B_hunted_house.cpp  CMakeLists.txt  C_Card_Game.cpp
