cmake_minimum_required(VERSION 3.23)
project(c___toutorial)

set(CMAKE_CXX_STANDARD 14)

add_executable(c___toutorial
        .idea/.gitignore
        ".idea/c++ toutorial.iml"
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .vscode/c_cpp_properties.json
        .vscode/launch.json
        .vscode/settings.json
        .vscode/tasks.json
        output/A-simple_design.exe
        output/A_Sorting_with_Twos.exe
        output/A_Sum_of_Three.exe
        output/B_hunted_house.exe
        output/C_Card_Game.exe
        output/C_Doremy's_Drying_Plan.exe
        output/main.exe
        output/q.exe
        output/test.exe
        A-simple_design.cpp
        A_Sorting_with_Twos.cpp
        A_Sum_of_Three.cpp
        B_hunted_house.cpp
        C_Card_Game.cpp
        q.cpp)
